included a login page: index1.html since there is no landing page. created includes folder for login and database connection students login working. Not fully functional. 5%

--- a/index1.html
+++ b/index1.html
@@ -24,11 +24,12 @@
 
 </head>
 <body>
-	<form method="POST">
+	<form method="POST" action="includes/login.php">
 	<p>Id Number: 
-	<input type="text" name="idnumber" placeholder="1234567" required>
+	<input type="text" name="idno" placeholder="1234567" required>
 	<p>password
 	<input type="password" name="password" placeholder="jsA!@MKl" required>
+	<input type="submit" value="login" name="login">
 	</form>
 </body>
 </html>
