--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
 
+
+    <?php include 'includes/dbconnection.php' ?>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,8 +45,8 @@
                 <p href="home.html" class="form-title">
                     Sign In</p>
                 <form class="login">
-                <input type="text" placeholder="Username" />
-                <input type="password" placeholder="Password" />
+                <input type="text" placeholder="ID Number" name="idnumber" />
+                <input type="password" placeholder="Password" name = "password"/>
                 <input type="submit" value="Sign In" class="btn btn-success btn-sm" />
                 <div class="remember-forgot">
                     <div class="row">
