--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="webtek 2015">
     <meta name="author" content="">
 
-    <title>Webtek fnals 2015</title>
+    <title>SLU Enrollment</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     
                  
                     <li>
-                        <a href="subjects.html">Pre-Enroll</a>
+                        <a href="subjects.php">Pre-Enroll</a>
                     </li>
 
                     <li>
@@ -90,7 +90,7 @@
                                                                 <a href="#" class="btn btn-default btn-sm">Change Password</a>
                                                             </div>
                                                             <div class="col-md-6">
-                                                                <a href="#" class="btn btn-default btn-sm pull-right">Sign Out</a>
+                                                                <a href="includes/logout.php" class="btn btn-default btn-sm pull-right">Sign Out</a>
                                                             </div>
                                                         </div>
                                                     </div>
