debugging search functionality

--- a/subjects.html
+++ b/subjects.html
@@ -318,10 +318,10 @@
             
           </div>
           <div class="panel-body">
-            <input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Subjects" />
+            <input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table2" placeholder="Filter Subjects" />
           </div>
           
-    <table class="table table-hover" id="dev-table">
+    <table class="table table-hover" id="dev-table2">
       <thead>
         <tr>
           <th>Class Code</th>
