--- a/trunk/index.html
+++ b/trunk/index.html
@@ -27,12 +27,10 @@
 
 
 </head>
-
 <body>
-
-    <div class="container">
+    <div class="container theme-showcase" role="main">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 ">
             <div class="pr-wrap">
                 <div class="pass-reset">
                     <label>
