--- a/portfolio-2-col.html
+++ b/portfolio-2-col.html
@@ -223,7 +223,7 @@
    </div>
    
      <div class="col-md-2">
-              <input type="button" onclick="printDiv('table')"  id="printButton" value="Print Schedule" /> 
+              <input class="NavButton" id="btnPrint" type="button" value="Print Schedule" onclick="window.print();">
    </div>
               
    </div>
